--- a/clearcreek.html
+++ b/clearcreek.html
@@ -449,7 +449,7 @@
 	    // http://leafletjs.com/reference.html#geojson-style
 	    style: function(feature) {
 	        return {
-	            color: '#336633'
+	            color: '#00CC00'
 	        };
 	    }
 	    });
@@ -487,7 +487,7 @@ var trails = omnivore.geojson('ccreak.geojson', null, greenLayer)
 
 	var baseMaps = {
 		"Gray Basemap": greymap,
-		"Basemap": Esri_WorldTopoMap,
+		"Topo Map": Esri_WorldTopoMap,
 		"Imagery": Esri_WorldImagery
 	};
 
