--- a/wellstonfire.html
+++ b/wellstonfire.html
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="src/Control.Geocoder.css" />
   <script src="src/Control.Geocoder.js"></script>
   
+  <script src="src/mapsheet.js"></script>
+  
 
   <style>
   	#map { position:absolute; top:0; bottom:0; width:100%; }
@@ -63,18 +65,11 @@
     
 	var map = L.map('map');
 	
-	var runLayer = omnivore.geojson('btrail.geojson')
-		.on('ready', function() {
-        	map.fitBounds(runLayer.getBounds());
-        });
-
-	var test = L.tileLayer('tiles/{z}/{x}/{y}.png', {
-		zIndex: 1,
-	}).addTo(map);
-
 	var OpenStreetMap_BlackAndWhite = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(map);
+
+
 
 	var baseMaps = {
 		"Gray Basemap": OpenStreetMap_BlackAndWhite,
@@ -83,7 +78,7 @@
 	};
 
 	var overlayMaps = {
-		 "Buckeye Trail": omnivore.geojson('btrail.geojson')
+		 "Hydrants": omnivore.geojson('btrail.geojson')
 	};
 
 	L.control.layers(baseMaps).addTo(map);
