--- a/buckeye-trail.html
+++ b/buckeye-trail.html
@@ -66,11 +66,11 @@
 	var runLayer = omnivore.geojson('btrail.geojson')
 		.on('ready', function() {
         	map.fitBounds(runLayer.getBounds());
-        });
+        }).addTo(map);
 
-	var test = L.tileLayer('tiles/{z}/{x}/{y}.png', {
-		zIndex: 1,
-	}).addTo(map);
+//	var test = L.tileLayer('tiles/{z}/{x}/{y}.png', {
+//		zIndex: 1,
+//	}).addTo(map);
 
 	var OpenStreetMap_BlackAndWhite = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
