--- a/buckeye-trail.html
+++ b/buckeye-trail.html
@@ -29,7 +29,7 @@
   
 
   <style>
-  	#map { position:relative; top:0; bottom:0; width:100%; }
+  	#map { top:0; bottom:0; width:100%; }
 	#footer {
 	      position:absolute;
 	      bottom:20px;
